# my_code

./: CMakeLists.txt  main
DataStructures/: dsu.cpp  fenwick_tree.cpp  full_segment_tree.cpp  merge_sort_tree.cpp  rmq.cpp  segment_tree.cpp  segment_tree_simple.cpp
Functions/: general_euler
Geometry/: convex_polygon_area.cpp  segments_interaction.cpp
Graphs/: components_connectedness.cpp  dijkstra.cpp  edmonds_karp.cpp  find_bridges.cpp  floyd_warshall.cpp  push_relabel.cpp  topology_sort.cpp
Other/: euler_function.cpp  random.cpp  sieve_of_eratosthenes.cpp  sudoku_solver.cpp
Strings/: aho_korasik.cpp  lcp.cpp  manacher.cpp  prefix_function.cpp  prefix_to_zet.cpp  suff_arr_slow.cpp  zet_function.cpp  zet_to_prefix.cpp
Trees/: bin_tree.cpp  lca.cpp
